# static_init

./: .gitignore  Cargo.toml  README.md  at_exit.rs  build.rs  crap.rs
benches/: init.rs  macro.rs
benches/multi_threaded/: .synchronised_bench.rs.un~  main.rs  synchronised_bench.rs  synchronised_bench.rs~  tick_counter.rs
src/: at_exit.rs  at_thread_exit.rs  exit_sequentializer.rs  futex.rs  generic_lazy.rs  lazy.rs  lazy_sequentializer.rs  lib.rs  mutex.rs  mutex_old.rs  once.rs  phase_locker.rs  raw_static.rs  spinwait.rs  splited_sequentializer.rs  static_lazy.rs  thread_local_lazy.rs
src/mutex/: .sync_phase_locker.rs.rustfmt  futex.rs  spin_wait.rs  sync_phase_locker.rs  unsync_phase_locker.rs
src/phase_locker/: futex.rs  spin_wait.rs  sync.rs  sync_spinning.rs  unsync.rs
static_init_macro/: Cargo.toml  build.rs
static_init_macro/src/: .lib.rs.rustfmt  lib.rs
test_suite/: Cargo.toml
test_suite/benches/: macro.rs
test_suite/tests/: macro.rs
tests/: bad_cyclic_lazy.rs  bad_cyclic_thread_local_lazy.rs  bad_drop_order.rs  bad_drop_unordered.rs  bad_init_order.rs  bad_init_unordered.rs  initialization.rs  lazy.rs  lazy_finalize.rs  lesser_lazy.rs  lesser_lazy_finalize.rs  lesser_locked_lazy.rs  lesser_locked_lazy_drop.rs  lesser_locked_lazy_finalize.rs  locked_lazy.rs  locked_lazy_drop.rs  macro.rs  primed_lesser_locked_lazy.rs  primed_lesser_locked_lazy_drop.rs  primed_locked_lazy.rs  primed_locked_lazy_drop.rs  unsync_lazy.rs  unsync_lazy_drop.rs  unsync_lazy_finalize.rs  unsync_locked_lazy.rs  unsync_locked_lazy_drop.rs  unsync_locked_lazy_finalize.rs  unsync_primed_locked_lazy.rs  unsync_primed_locked_lazy_drop.rs
