[package]
name = "static_init_macro"
version = "0.5.0"
authors = ["Olivier Kannengieser <okannen@gmail.com>"]
edition = "2018"
description = "Attribute macros for static_init crate"
keywords = ["no_std","utility","static","constructor","initialization"]
categories = ["no-std","os"]
repository = "https://gitlab.com/okannen/static_init"
license = "MIT OR Apache-2.0"

[features]
debug_order = []

[lib]
proc-macro=true

[dependencies]
syn= {version = "1", features = ["full"]}
quote="1"
proc-macro2="1"
memchr="2"

[build-dependencies]
cfg_aliases = "0.1"
